--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="flex-1 overlay">
         <!-- Header Section -->
         <header class="text-center py-12">
-            <h1 class="header-text text-5xl md:text-6xl font-bold text-pink-600">Жанара & Айбек</h1>
+            <h1 class="header-text text-5xl md:text-6xl font-bold text-pink-600">Айбек & Жанара</h1>
             <p class="mt-4 text-lg md:text-xl text-gray-700">Приглашаем вас на нашу свадьбу!</p>
         </header>
 
